# cli-rs

./: Cargo.toml  config.toml
src/: args.rs  main.rs
src/llm/: chat.rs  mod.rs
