[package]
name = "llm-call"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
config = "0.15.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
serde_derive = "1.0"
toml = "0.8"
async-openai = "0.28.1"
anyhow = "1.0.98"
chrono = "0.4.40"
futures = "0.3.31"
